--- a/style/styles.css
+++ b/style/styles.css
@@ -1,11 +1,11 @@
 body {
   font-family: Roboto, sans-serif;
-  color: #434455;
-  line-height: 1.5;
   font-style: normal;
   font-weight: 400;
-  letter-spacing: 2%;
   font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
 ul {
   list-style-type: none;
@@ -16,26 +16,35 @@ ul {
 }
 .navigation {
 }
-.navigation .logo {
+.logo {
   text-decoration: none;
-  color: #2e2f42;
   font-family: 'Raleway';
   font-weight: 800;
   font-size: 18px;
-  line-height: 21px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  color: #2e2f42;
+}
+.navigation .address {
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 500;
+  color: #2e2f42;
 }
 .navigation .link {
   text-decoration: none;
-  color: #2e2f42;
   font-style: normal;
+  font-weight: 500;
+  color: #2e2f42;
 }
-.navigation .link:hover {
+
+.navigation .link:active {
   color: #404bbf;
 }
 
 /* main */
+
 .page-title {
   font-weight: 700;
   font-size: 56px;
@@ -51,7 +60,53 @@ ul {
   letter-spacing: 0.04em;
   color: #ffffff;
   background-color: #4d5ae5;
+  border: none;
 }
 .button:hover {
   background-color: #404bbf;
+}
+/* Advantages */
+.section-item {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+.section-text {
+  text-align: left;
+}
+.section-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+}
+.team-name {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  text-align: center;
+  color: #2e2f42;
+}
+.team-item {
+  text-align: center;
+}
+/* footer */
+.footer {
+  background-color: #2e2f42;
+}
+.footer-text {
+  color: #f4f4fd;
+}
+/* portfolio */
+.list-item {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  color: #2e2f42;
 }
