--- a/css/styles.css
+++ b/css/styles.css
@@ -36,36 +36,23 @@ body {
 .header-logo-span {
   color: #2e2f42;
 }
-
-.header-menu-item.link {
-  list-style-type: none;
+.header-menu {
+}
+.header-menu.list {
+  list-style: none;
 }
 .header-menu-link {
   font-weight: 500;
   font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
   color: var(--notmain-color);
 }
-.header-menu-link {
-  text-decoration: none;
-  list-style: none;
-}
-.header-menu-link:focus,
-.header-menu-link:hover {
-  color: #404bbf;
-}
-.header-address {
-  text-decoration: none;
-  list-style-type: none;
-  font-style: normal;
-}
-.header-address-item.link {
+.header-menu-link.link {
   text-decoration: none;
 }
-.header-address-item {
-  color: inherit;
-}
-.header-address-item:focus,
-.header-address-item:hover {
+.header-menu-link:hover,
+.header-menu-link:focus {
   color: #404bbf;
 }
 
@@ -77,14 +64,12 @@ body {
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
-  text-align: center;
   letter-spacing: 0.02em;
   color: var(--hero-sect-color);
 }
 .hero-button {
   font-family: inherit;
   font-weight: 500;
-  align-items: center;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: var(--hero-sect-color);
@@ -122,7 +107,6 @@ body {
   font-size: 36px;
   line-height: 1.11;
   text-transform: capitalize;
-  text-align: center;
   color: var(--notmain-color);
 }
 .works-list.list {
@@ -137,7 +121,6 @@ body {
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
-  text-align: center;
   text-transform: capitalize;
   color: var(--notmain-color);
 }
@@ -154,11 +137,9 @@ body {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  text-align: center;
   color: var(--notmain-color);
 }
 .team-text {
-  text-align: center;
 }
 
 /** ---------------------FOOTER--------------------- */
@@ -197,8 +178,6 @@ body {
 }
 .portfolio-button {
   font-weight: 500;
-  align-items: center;
-  text-align: center;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #4d5ae5;
