--- a/css/styles.css
+++ b/css/styles.css
@@ -49,12 +49,6 @@ body {
   color: var(--notmain-color);
 }
 
-.header-menu-item {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--main-color);
-}
 .header-menu-link.link {
   text-decoration: none;
 }
@@ -62,14 +56,21 @@ body {
 .header-menu-link:focus {
   color: #404bbf;
 }
-.header-address {
-  font-style: normal;
-}
 
 .header-address-list.list {
   list-style: none;
 }
-
+.header-address-item {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  color: var(--main-color);
+}
+.header-address-item.link {
+  text-decoration: none;
+}
 .header-address-item.link:hover,
 .header-address-item.link:focus {
   color: #404bbf;
